@@ -87,7 +87,22 @@
 			
 			return $result;
 		}
+
+		public function makeListItemBuilder($object)
+		{
+			return $this;
+		}
 		
+		/**
+		 * @return PrototypedBuilder
+		**/
+		public function makeReverseBuilder()
+		{
+			throw new UnimplementedFeatureException(
+				'reverse builder is not provided yet'
+			);
+		}
+
 		/**
 		 * Also try using plain limitedPropertiesList instead of limited
 		 * hierarchy recursing.
@@ -135,7 +150,9 @@
 		public function compile($object, $recursive = true)
 		{
 			$result = $this->createEmpty();
-			
+
+			$this->initialize($object, $result);
+
 			if ($recursive)
 				$result = $this->upperMake($object, $result);
 			else
@@ -164,7 +181,8 @@
 			$result = array();
 			
 			foreach ($objectsList as $object) {
-				$result[] = $this->make($object);
+				$result[] = $this->makeListItemBuilder($object)->
+					make($object);
 			}
 			
 			return $result;
@@ -194,7 +212,7 @@
 			$setter = $this->getSetter($result);
 			
 			foreach ($this->getFormMapping() as $id => $primitive) {
-				
+
 				$value = $getter->get($id);
 				
 				if ($primitive instanceof PrimitiveFormsList) {
@@ -232,6 +250,11 @@
 			return $result;
 		}
 		
+		protected function initialize($object, &$result)
+		{
+			return $this;
+		}
+
 		protected function getFormMapping()
 		{
 			$protoMapping = $this->proto->getFormMapping();
